fixed spacing between componenets

--- a/src/containers/blog/BlogContainer.css
+++ b/src/containers/blog/BlogContainer.css
@@ -1,6 +1,7 @@
 .blog-container {
     max-width: 1320px;
-    width: 100%
+    width: 100%;
+    margin-bottom: 50px;
 }
 
 .blog-container > h1 {
